--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,6 +8,8 @@ import Image from "../components/Image.astro"
 <Layout title="About">
 <Section title="About">
     <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="/about/students"  class="text-body">For students</a></li>
+        <li class="list-group-item"><a href="/about/instructors" class="text-body">For instructors</a></li>
         <li class="list-group-item"><a href="/about/team" class="text-body">The Team</a></li>
         <li class="list-group-item"><a href="/about/project" class="text-body">The project</a></li>
         <li class="list-group-item">
