--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -179,57 +179,58 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 
 <DisplayTable id="mvdiag_table">
     <thead>
-        <tr>
-            <th class="table-shaded"><strong>Shape</strong></th>            
+        <tr style="text-align: center">
+            <th class="table-shaded" style="vertical-align: middle; width:10%"><strong>Shape</strong></th>
+            <th class="table-shaded" style="vertical-align: middle; width:60%"><strong>Diagram</strong></th>            
             <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{x}}"/></strong></th>
             <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{y}}"/></strong></th>    
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td class="nosideborderleft">
-                Rectangle <br>
-                <Image src='/Statics/COMFigures/RectangleCentroid.png' width='3' />
+        <tr style="vertical-align: middle; text-align: center">
+            <td class="nosideborderleft" >
+                Rectangle </td>
+                <td><Image src='/Statics/COMFigures/RectangleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="b/2" /></td>
             <td><DisplayEquation equation="h/2" /></td>
         </tr>
-        <tr>
+        <tr style="vertical-align: middle; text-align: center">
             <td class="nosideborderleft">
-                Right Triangle <br>
-                <Image src='/Statics/COMFigures/TriangleCentroid.png' width='3' />
+                Right Triangle </td>
+                <td><Image src='/Statics/COMFigures/TriangleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="b/3" /></td>
             <td><DisplayEquation equation="h/3" /></td>
         </tr>
-        <tr>
+        <tr style="vertical-align: middle; text-align: center">
             <td class="nosideborderleft">
-                Isoceles Triangle <br>
-                <Image src='/Statics/COMFigures/IsocelesTriangleCentroid.png' width='3' />
+                Isoceles Triangle </td>
+                <td><Image src='/Statics/COMFigures/IsocelesTriangleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="b/2" /></td>
             <td><DisplayEquation equation="h/3" /></td>
         </tr>
-        <tr>
+        <tr style="vertical-align: middle; text-align: center">
             <td class="nosideborderleft">
-                Circle <br>
-                <Image src='/Statics/COMFigures/CircleCentroid.png' width='3' />
+                Circle </td>
+                <td><Image src='/Statics/COMFigures/CircleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="r" /></td>
             <td><DisplayEquation equation="r" /></td>
         </tr>
-        <tr>
+        <tr style="vertical-align: middle; text-align: center">
             <td class="nosideborderleft">
-                Semicircle <br>
-                <Image src='/Statics/COMFigures/SemicircleCentroid.png' width='3' />
+                Semicircle </td>
+                <td><Image src='/Statics/COMFigures/SemicircleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="r" /></td>
             <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
         </tr>
-        <tr>
+        <tr style="vertical-align: middle; text-align: center">
             <td class="nosideborderleft">
-                Quarter Circle <br>
-                <Image src='/Statics/COMFigures/QuarterCircleCentroid.png' width='3' />
+                Quarter Circle </td>
+                <td><Image src='/Statics/COMFigures/QuarterCircleCentroid.png' width='5' />
             </td>
             <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
             <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
