--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ const pagename = cleaned[1]
 			gtag('config', 'G-2YD4TR8K2S');
 		</script>
 	</head>
-	<body class="w-100">
+	<body style="width: 100%;">
 		<Navbar />
 		<div class="container-xxl content mb-5">
 			<NavtreeContainer page={pagename} course={course}>
