--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Mechanics Reference">
+
+<Image src='/public/MainFig.png' width='6'></Image>
+
     <Section title="Welcome to Mechref!">
 
         <p class="mb-5 d-none d-xl-block">
