--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Mechanics Reference">
 
-<Image src='/public/MainFig.png' width='6'></Image>
+<Image src='/MainFig.png' width='6'></Image>
 
     <Section title="Welcome to Mechref!">
 
