--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import Layout from '../layouts/Layout.astro';
 <Image src='/MainFig.png'></Image>
 </Col>
 <Col values="6">
-Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.
+<p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
 
-You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors.
+<p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
 
 </Col>
 </Row>
