--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout_index from '../layouts/Layout_index.astro';
+import Layout from '../layouts/BlankLayout.astro';
 import Section from '../components/Section.astro';
 import SubSection from '../components/SubSection.astro';
 import Searchbar from '../components/Searchbar.astro';
@@ -8,21 +8,19 @@ import CalloutCard from '../components/CalloutCard.astro';
 import Image from '../components/Image.astro';
 import Row from '../components/Row.astro';
 import Col from '../components/Col.astro';
-import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Mechanics Reference">
 
 <Row>
-<Col values="7">
-<Image src='/MainFig.png'></Image>
-</Col>
-<Col values="5">
-<p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
+    <Col values="7">
+        <Image src='/MainFig.png' width="8" class_=""></Image>
+    </Col>
+    <Col values="5">
+        <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
 
-<p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
-
-</Col>
+        <p>You can navigate directly to a course listed above or learn more about the reference pages including information for students and instructors by clicking on the about page to the right of the top menu bar.</p>
+    </Col>
 </Row>
 
     
