added missing imports

--- a/src/pages/about/students.astro
+++ b/src/pages/about/students.astro
@@ -3,6 +3,9 @@ import Layout from "../../layouts/Layout.astro"
 import Section from "../../components/Section.astro"
 import SubSection from "../../components/SubSection.astro"
 import Image from "../../components/Image.astro"
+import Searchbar from "../../components/Searchbar.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
 
 <Layout title="About">
