--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Col from '../components/Col.astro';
 
 <Row>
     <Col values="7">
-        <Image src='/MainFig.png' width="8" class_=""></Image>
+        <Image src='/MainFig.png' class_=""></Image>
     </Col>
     <Col values="5">
         <p>Welcome to the reference pages for some of the courses taught in Mechanical Science and Engineering at the University of Illinois at Urbana-Champaign.</p>
