--- a/src/pages/about/students.astro
+++ b/src/pages/about/students.astro
@@ -6,6 +6,8 @@ import Image from "../../components/Image.astro"
 import Searchbar from "../../components/Searchbar.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
+import Row from '../components/Row.astro';
+import Col from '../components/Col.astro';
 ---
 
 <Layout title="About">
