--- a/src/pages/about/students.astro
+++ b/src/pages/about/students.astro
@@ -33,8 +33,12 @@ import Col from '../components/Col.astro';
 
 <SubSection title="In-page features">
         <p>Pages contain blue boxes, meant to give you helpful tips, extra information, or show applications of the material being discussed!</p>
+        <p>You can also find an in-page navigation menu, showing you all the sections and subsections in the page, and allow you to navigate to them in one click. On phones and tablets, this is located at the top of the page, and on desktops and laptops it is below the sidebar menu.
+                </p>
+</SubSection>
+
+<SubSection title="In-page features">
         <Row>
-            
             <Col values="6 md-8 lg-9">
                 <p>
                     You can also find a in-page navigation menu, showing you all the sections and subsections in the page, and allow you to navigate to them in one click. On phones and tablets, this is located at the top of the page, and on desktops and laptops it is below the sidebar menu.
@@ -52,14 +56,15 @@ import Col from '../components/Col.astro';
         </Row>      
 </SubSection>
  
-<SubSection title="SIIP efforts in TAM 2XX">
-    <Image src="/about/studentLearningOutcomes.PNG" width="7"/>
-    <Image src="/about/assessmentOfLearning.PNG" width="7"/>
+<SubSection title="Improving student learning">
+<p>These reference pages have been designed to help you access critical information when working on homeworks or studying for quizzes and exams.  </p>
+<p> Feedback from students was thay they preferred a web-based resources versus a textbook. </p>
+ <Image src="/about/referencePage.PNG" width="7"/>
+
+<p> We found that student GPA increased in introductory mechanics courses that included reference pages in addition to creating an active and collaborative learning environment. </p>
+    <Image src="/about/studentLearningOutcomes.PNG" width="5"/>
     <Image src="/about/activeAndCollabLearning.PNG" width="7"/>
     <Image src="/about/blendedLearning.PNG" width="7"/>
-    <Image src="/about/referencePage.PNG" width="7"/>
-    <Image src="/about/onlineHomework.PNG" width="7"/>
-    <Image src="/about/quizRetries.PNG" width="7"/>
 </SubSection>
 
 <SubSection title="Importance of collaboration in learning">
