--- a/src/pages/about/students.astro
+++ b/src/pages/about/students.astro
@@ -40,7 +40,7 @@ import Col from '../components/Col.astro';
  
 <SubSection title="Improving student learning">
 <p>These reference pages have been designed to help you access critical information when working on homeworks or studying for quizzes and exams.  </p>
-<p> Feedback from students was thay they preferred a web-based resources versus a textbook. </p>
+<p> Feedback from students was that they preferred web-based resources versus a textbook. </p>
  <Image src="/about/referencePage.PNG" width="5"/>
 
 <p> We found that student GPA increased in introductory mechanics courses that included reference pages in addition to creating an active and collaborative learning environment. </p>
@@ -49,9 +49,4 @@ import Col from '../components/Col.astro';
     <Image src="/about/blendedLearning.PNG" width="5"/>
 </SubSection>
 
-<SubSection title="Importance of collaboration in learning">
-    <p>The TAM 2XX staff has worked on engineering education research with the <a target="_blank" href="https://www.colearnlab.org/" >Collaborative Learning Laboratory</a> in the Department of Education. This project is called Collaborative Support Tools for Engineering Problem Solving (CSTEPS).</p>
-
-    <p>As Teaching and Course Assistants, we try to encourage a collaborative environment using the principle of this  <a target="_blank" href="/about/CollabTeachingSequence.pdf">teaching sequence.</a></p>
-</SubSection>
 </Layout>
