--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -3,18 +3,18 @@ import Layout from "../../layouts/Layout.astro"
 import Section from "../../components/Section.astro"
 import SubSection from "../../components/SubSection.astro"
 import Image from "../../components/Image.astro"
-import Row from '../components/Row.astro';
-import Col from '../components/Col.astro';
+import Row from '../../components/Row.astro';
+import Col from '../../components/Col.astro';
 ---
 
 <Layout title="About">
 
 <Row>
-    <Col values="7">
+    <Col values="6">
        <p> Mission </p>
        <p> </p>
     </Col>
-    <Col values="5">
+    <Col values="6">
         <p> Vision </p>
     </Col>
 </Row>
