--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -9,14 +9,9 @@ import Col from '../../components/Col.astro';
 
 <Layout title="About">
 
-<Row>
-    <Col values="6">
+<SubSection>
        <p> Mission </p>
-       <p> </p>
-    </Col>
-    <Col values="6">
-        <p> Vision </p>
-    </Col>
-</Row>
+       <p>  Create quality and freely accessible on-line educational materials that enhances student curiosity, connection and creates value for for both student and instructor.</p>
 </SubSection>
+
 </Layout>
