--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,8 +18,7 @@ import Image from "../components/Image.astro"
                 <li class="list-group-item pb-0"><a href="/about/instructions/external" class="text-body">... as another college</a></li>
             </ul>
         </li>
-        <li class="list-group-item"><a href="/about/team" class="text-body">The Team</a></li>
-        <li class="list-group-item"><a href="/about/project" class="text-body">The project</a></li>
+        <li class="list-group-item"><a href="/about/team" class="text-body">The project and our team</a></li>
     </ul>
 </Section>
 </Layout>
