--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -11,7 +11,17 @@ import Col from '../../components/Col.astro';
 
 <SubSection>
        <p> Mission </p>
-       <p>  Create quality and freely accessible on-line educational materials that enhances student curiosity, connection and creates value for for both student and instructor.</p>
+       <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for for both student and instructor.</p>
+</SubSection>
+
+<SubSection>
+       <p> Project history </p>
+       <p>  </p>
+</SubSection>
+
+<SubSection>
+       <p> Our team </p>
+       <p>  </p>
 </SubSection>
 
 </Layout>
