--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -16,12 +16,23 @@ import Col from '../../components/Col.astro';
 
 <SubSection>
        <p> Project history </p>
-       <p>  </p>
+       <p> The course reference pages began as part of a larger college-wide effort from the University of Illinois at Urbana Champaogn Strategic Instructional Initiatives Program (SIIP).  
+              The work was done as part of a Community of Practice (COPs) model involving instroctores committed to the collaborative development of educations resources.  
+              Initial pages were developed by Prof. Matt West and with the formation of the COPs are under continual development and revision by a broad team of faculty, graduate assistants, and undergraduate students.</p>
+       <p> The working theory of the reference pages is that they should be accessible, interactive, and engaging.   </p>
 </SubSection>
 
 <SubSection>
        <p> Our team </p>
        <p>  </p>
+</SubSection>
+
+<SubSection>
+       <p> Acknowledgements </p>
+       <p> Funding for the development of the course reference pages has been provided by: </p>
+       <p> The Grainger College of Engineering Strategic Instructional Innovations Program</p>
+        <p> Kern Family Foundation </p>
+        <p> Department of Mechanical Science and Engineering </p>
 </SubSection>
 
 </Layout>
