--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -16,9 +16,10 @@ import Col from '../../components/Col.astro';
 
 <SubSection>
        <p> Project history </p>
-       <p> The course reference pages began as part of a larger college-wide effort from the University of Illinois at Urbana Champaogn Strategic Instructional Initiatives Program (SIIP).  
-              The work was done as part of a Community of Practice (COPs) model involving instroctores committed to the collaborative development of educations resources.  
-              Initial pages were developed by Prof. Matt West and with the formation of the COPs are under continual development and revision by a broad team of faculty, graduate assistants, and undergraduate students.</p>
+       <p> The course reference pages began as part of a larger college-wide effort from the University of Illinois at Urbana Champaign (UIUC) Strategic Instructional Initiatives Program (SIIP).  
+              The reference pages were created using a Community of Practice (COPs) model which centers on instructors and staff committed to the collaborative development of educational resources.  
+              Initial pages for Dynamics were developed by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
+              The pages are under continual development and revision by a dedicated team of faculty, graduate assistants, and undergraduate students.</p>
        <p> The working theory of the reference pages is that they should be accessible, interactive, and engaging.   </p>
 </SubSection>
 
