--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -9,8 +9,7 @@ import Col from '../../components/Col.astro';
 
 <Layout title="About">
 
-<SubSection>
-       <p> Mission </p>
+<SubSection id="secondary-section" title="Mission">
        <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for for both student and instructor.</p>
 </SubSection>
 
