--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -13,8 +13,7 @@ import Col from '../../components/Col.astro';
        <p>  Create quality and freely accessible on-line educational materials that enhance student curiosity, connection and creates value for for both student and instructor.</p>
 </SubSection>
 
-<SubSection>
-       <p> Project history </p>
+<SubSection id="secondary-section" title="Project history">
        <p> The course reference pages began as part of a larger college-wide effort from the University of Illinois at Urbana Champaign (UIUC) Strategic Instructional Initiatives Program (SIIP).  
               The reference pages were created using a Community of Practice (COPs) model which centers on instructors and staff committed to the collaborative development of educational resources.  
               Initial pages for Dynamics were developed by Prof. Matt West and with the formation of the COPs have now been extended to multiple courses offered by the Department of Mechanical Science and Engineering.
@@ -22,17 +21,14 @@ import Col from '../../components/Col.astro';
        <p> The working theory of the reference pages is that they should be accessible, interactive, and engaging.   </p>
 </SubSection>
 
-<SubSection>
-       <p> Our team </p>
-       <p>  </p>
-</SubSection>
 
-<SubSection>
-       <p> Acknowledgements </p>
+
+<SubSection id="secondary-section" title="Acknowledgements">
        <p> Funding for the development of the course reference pages has been provided by: </p>
        <p> The Grainger College of Engineering Strategic Instructional Innovations Program</p>
         <p> Kern Family Foundation </p>
         <p> Department of Mechanical Science and Engineering </p>
+       <p> Some images used were created with biorender.com </p>
 </SubSection>
 
 </Layout>
