--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -464,14 +464,14 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 <SubSubSection title = "Finding Centroids Using Composite Shapes" id = "composite_shapes">
 
 <Example title="Find centroid of a composite shape"  id="com-ccs">
-	<ul>
-		<li> Solve for <InlineEquation equation=" \\bar{y}" /> </li>
-		<li> Line of symmetry at <InlineEquation equation="x = 2 \\quad cm" /> </li>
-	</ul>
+	
+   Solve for centroid <InlineEquation equation=" (\\bar{x} , \\bar{y})" />  of the shape below.
+
 	
 	<Image src="/Statics/COMFigures/CompositeEx.jpg" width="4"></Image>
 	
 	<div slot="solution">
+	<p> First, we notice that there's a line of symmetry along <InlineEquation equation=" x = 2 \\ cm" /> , so we know that <InlineEquation equation="\\bar{x} = 2  \\ cm" />  because if there is a line of symmetry the centroid falls on that line of symmetry. This means that we only need to colve for <InlineEquation equation="\\bar{y}" />. </p>
 	<DisplayEquation equation=" \\begin{aligned}  (\\bar{x}, \\bar{y}) &amp;= (2, ?)  \\\\     \\bar{y} &amp;= \\frac{\\sum \\tilde{y}_i A_i}{\\sum A_i}   \\end{aligned}"/>
 	
 	<Image src="/Statics/COMFigures/CompositeSol.jpg" width="8"></Image>
