--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -45,6 +45,23 @@ For an incompressible fluid (density <InlineEquation equation='\\rho' />) at res
 
 <strong>Archimedes' Principle:</strong> Any object that is either partially or totally immersed in a fluid has a buoyancy force equal to the weight of the fluid displaced by the object. 
 
+<Image src='/Statics/FluidFigures/Buoyancy.jpg' width='4'>
+
+
+    <DisplayEquation equation="\\begin{aligned}  F_B &amp;=  W   \\\\   &amp;= m_{water} \\ g \\\\  &amp;= \\rho_{water} \\ V_{displaced} \\ g    \\\\   &amp;= \\rho_{water} (\\frac{4}{3} \\pi R^3) \\ g  \\end{aligned}"   background="True" title="Force equation of Buoyancy"   id="hff-eq" derivation="True">
+            <p>
+                <Image src='/Statics/FluidFigures/BuoyancyDerivation.jpg' width='4'>
+				
+				
+                <DisplayEquation equation="\\sum F_x :  \\text{horizontal forces cancel out}"/>
+				<DisplayEquation equation="\\begin{aligned}  \\sum F_y :  F_B  &amp;= F_{R_2} - F_{R_1}  \\\\    &amp;= W_2 \\ S  -  W_1 \\ S  \\\\   &amp;=  \\rho \\ g \\ h_2 \\ S^2 -  \\rho \\ g \\ h_1 \\ S^2   \\\\   &amp;=  \\rho \\ g \\ S^2 \\ (h_2  -  h_1)  \\\\ &amp;=  \\rho \\ g \\ S^3   \\\\  F_B  &amp;=  \\rho \\ g \\ V  = m \\ g  \\end{aligned} "/>
+                
+				<p> In which <InlineEquation equation=" F_B " /> is the buoyance force, <InlineEquation equation=" \\rho \\ g \\ V " /> is the volume of the cube, and <InlineEquation equation=" m \\ g " /> is the weight of the cube. </p>
+			 </p>
+    </DisplayEquation>
+
+
+</DisplayEquation>
 
 <!--Do we need to include anything else for buoyancy?
 %Lecture 32-->
