--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -252,10 +252,10 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 
 <p> To solve for the centroid of our original shape <InlineEquation equation="(\\bar{x}, \\bar{y})" />, we take a weighted sum of each of the centroids of our smaller shapes. We will call the centroid locations of the smaller shapes <InlineEquation equation="\\tilde{x}" /> and <InlineEquation equation="\\tilde{y}" />. </p>
 
-<DisplayEquation title="Composite Centroid (x)" id="compositex" background="True" equation="\\bar{x} &amp;= \\frac{\\sum \\tilde{x}_i A_i}{\\sum A_i}" derivation="False">
+<DisplayEquation title="Composite Centroid (x)" id="compositex" background="True" equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i A_i}{\\sum A_i}" derivation="False">
 </DisplayEquation>
 
-<DisplayEquation title="Composite Centroid (x)" id="compositey" background="True" equation="\\bar{y} &amp;= \\frac{\\sum \\tilde{y}_i A_i}{\\sum A_i}" derivation="False">
+<DisplayEquation title="Composite Centroid (y)" id="compositey" background="True" equation="\\bar{y} = \\frac{\\sum \\tilde{y}_i A_i}{\\sum A_i}" derivation="False">
 </DisplayEquation>
 
 <p> For these equations, the weighted sum is dependent on the area of each individual shape. This is typically for 2D problems. You can also use length, weight, or mass as your weighing factor depending on what you're being asked to solve for. </p>
