--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -354,8 +354,8 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
     </tbody>
 </DisplayTable>
 	
-	 <DisplayEquation equation=" \\bar{y} = \\frac{\\sum \\tilde{y}_i A_i}{\\sum A_i} = \\frac{(72 - \\frac{64}{3} + \\frac{16}{3} + 12 \\pi) \\ cm^3}{(24 - 4 +2 \\pi \\ cm^2)}  = ... \\ cm   "/>
-	 <DisplayEquation equation=" (\\bar{x} , \\bar(y)) = (2, ...) \\ cm   "/>
+	 <DisplayEquation equation=" \\bar{y} = \\frac{\\sum \\tilde{y}_i A_i}{\\sum A_i} = \\frac{(72 - \\frac{64}{3} + \\frac{16}{3} + 12 \\pi) \\ cm^3}{(24 - 4 +2 \\pi \\ cm^2)}  = 3.56 \\ cm   "/>
+	 <DisplayEquation equation=" (\\bar{x} , \\bar{y}) = (2, 3.56) \\ cm   "/>
 	 
 	</div>
 </Example>
